# WTF-is-CI-CD-pipeline-

./: README.md  main.py  pyproject.toml  setup.py
package_folder/folder/: module1.py
package_folder/folder/sub_package/: sub_module.py
