[project]
name = "ci-cd-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "distlib>=0.3.9",
    "isort>=6.0.1",
    "packaging>=25.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "setuptools>=80.8.0",
    "wheel>=0.45.1",
]
